--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.1
 Django==3.1.6
 django-cors-headers==3.7.0
+django-environ==0.4.5
 djangorestframework==3.12.2
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.6.0
