--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,32 @@
-version: '3.8'
+version: "3"
 
 services:
   db:
-    image: "postgres:12"
-    environment:
-      - "POSTGRES_HOST_AUTH_METHOD=trust"
+    container_name: auth_db
+    image: postgres:12.3
+    restart: always
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data
+    env_file: ./.env.docker
+
   web:
+    container_name: djangoJWT
     build: .
-    command: python /code/manage.py runserver 0.0.0.0:8000
+    restart: always
+    command: gunicorn project.wsgi:application --bind 0.0.0.0:8000
+    expose:
+      - 8000
     volumes:
-      - .:/code
-    ports:
-      - 8000:8000
+      - media_data:/app/media
+      - static_data:/app/static
+    env_file:
+      - .env
     depends_on:
       - db
+    links:
+      - db:db
 
 volumes:
+  media_data:
+  static_data:
   postgres_data:
