Refactor: Documentation, dockerfile, and YML file udpated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,32 @@
-version: '3'
+version: "3"
 
 services:
-  web:
+  db:
+    container_name: auth
+    image: postgres:12.5
     restart: always
-    build: ./app
-    expose:
-      - "8000"
-    links:
-      - postgres:postgres
     volumes:
-      - djangoJET:/usr/src/app
-      - web-static:/usr/src/app/static
+      - postgres_data:/var/lib/postgresql/data
     env_file: .env
-#    environment:
-#      DEBUG: 'true'
-    command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
 
-  postgres:
+  server:
+    container_name: django_jwt
+    build: .
     restart: always
-    image: postgres:latest
-    ports:
-      - "5432:5432"
+    command: gunicorn django_app.wsgi:application --bind 0.0.0.0:8000
+    expose:
+      - 8000
     volumes:
-      - pgdata:/var/lib/postgresql/data/
+      - media_data:/app/media
+      - static_data:/app/static
+    env_file:
+      - .env
+    depends_on:
+      - db
+    links:
+      - db:db
 
 volumes:
-  web-django:
-  web-static:
-  pgdata:
+  media_data:
+  static_data:
+  postgres_data:
