New: nginx implemented

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,20 @@ version: "3"
 
 services:
   db:
-    container_name: auth
+    container_name: core_db
     image: postgres:12.5
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    env_file: .env
+    env_file: ./.env.docker
+    networks:
+      - servernet
 
   server:
-    container_name: django_jwt
+    container_name: djangoJWT
     build: .
     restart: always
-    command: gunicorn django_app.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn djangoJWT.wsgi:application --bind 0.0.0.0:8000
     expose:
       - 8000
     volumes:
@@ -25,8 +27,28 @@ services:
       - db
     links:
       - db:db
+    networks:
+      - servernet
+
+  nginx:
+    container_name: nginx
+    build: ./nginx
+    restart: always
+    ports:
+      - 8080:80
+    depends_on:
+      - server
+    volumes:
+    - media_data:/media
+    - static_data:/static
+    networks:
+      - servernet
 
 volumes:
   media_data:
   static_data:
   postgres_data:
+
+networks:
+  servernet:
+    driver: bridge
