--- a/sample.env
+++ b/sample.env
@@ -9,6 +9,7 @@ DB_NAME=db_name
 DB_USERNAME=db_user
 DB_PASSWORD=db_password
 
+# SMTP mail configuraton setup
 EMAIL_HOST='mail.domain.com'
 EMAIL_HOST_USER='abc@domain.com'
 EMAIL_HOST_PASSWORD='abcdef'
